--- a/contact.html
+++ b/contact.html
@@ -34,14 +34,18 @@
       <div class="est">EST | 2020</div>
       <div class="subtext">PROFESSIONAL<br>NAIL ART</div>
     </a>
-    <button class="menu-toggle" onclick="toggleMenu()">
-      <i class="fa fa-bars"></i>
-    </button>
-    <nav class="nav-links" id="navMenu">
-      <a href="services.html">Services</a>
-      <a href="index.html#about">About Me</a>
-      <a href="faq.html">FAQ / Policy</a>
-      <a href="contact.html">Contact Us</a>
+    <div class="ham-menu" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <nav class="off-screen-menu" id="navMenu">
+      <ul>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="index.html#about">About Me</a></li>
+        <li><a href="faq.html">FAQ / Policy</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
     </nav>
   </div>
 </header>
