--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   <!-- Main Navbar -->
 <header>
   <div class="main-navbar">
-    <a href="index.html" class="logo">
-      <div class="brand-name">ALF NAILS ART</div>
-      <div class="est">EST | 2020</div>
-      <div class="subtext">PROFESSIONAL<br>NAIL ART</div>
+  <div class="logo-branding">
+    <a href="index.html">
+      <img src="./resources/css/images/logo transparent.png" alt="Logo">
     </a>
+  </div>
     <div class="ham-menu" onclick="toggleMenu()">
       <span></span>
       <span></span>
