--- a/index.html
+++ b/index.html
@@ -79,7 +79,49 @@
 <div class="modal" onclick="closeModal()">
   <img class="modal-content" id="expanded-image" src="" alt="">
 </div>
+  <!-- Slideshow -->
+   <!-- Container for the image gallery -->
+<div class="container">
 
+  <div class="slideshow-container">
+    <!-- Full-width images with number text -->
+    <div class="mySlides">
+      <div class="numbertext">1 / 6</div>
+      <img src="./resources/css/images/slide1.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">2 / 6</div>
+      <img src="./resources/css/images/slide2.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">3 / 6</div>
+      <img src="./resources/css/images/slide3.jpg" style="width:100%">
+    </div>
+
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+
+  <!-- Thumbnail images -->
+  <div class="row">
+    <div class="column">
+      <img class="demo cursor" src="./resources/css/images/slide1.jpg" style="width:100%" onclick="currentSlide(1)" alt="Slide 1">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="./resources/css/images/slide2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Slide 2">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="./resources/css/images/slide3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Slide 3">
+    </div>
+  </div>
+
+  <!-- Image text -->
+  <div class="caption-container">
+    <p id="caption"></p>
+  </div>
   <script src="./resources/js/menu.js"></script>
 </body>
 <footer>
