--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
 
   <!-- About Section -->
   <section class="two-column">
-    <div class="column">
-      <img src="./resources/css/images/natasha.jpg" alt="About Me">
-    </div>
-    <div class="column">
-      <h2 class="about">About Me</h2>
-      <p>
-        With over a decade of experience and international training, Natasha brings the art of the Russian manicure to her clients with precision and care. Her attention to detail and passion for perfection have made her salon one of the most trusted in the area.
-      </p>
-      <p>
-        Whether you're looking for a natural look or something bold, Natasha customizes each service to meet your style and needs.
-      </p>
-    </div>
-  </section>
+  <div class="column image-column">
+    <img class="about-me-picture" src="./resources/css/images/natasha.jpg" alt="About Me">
+  </div>
+  <div class="column text-column">
+    <h2 class="about">About Me</h2>
+    <p>
+      With over a decade of experience and international training, Natasha brings the art of the Russian manicure to her clients with precision and care. Her attention to detail and passion for perfection have made her salon one of the most trusted in the area.
+    </p>
+    <p>
+      Whether you're looking for a natural look or something bold, Natasha customizes each service to meet your style and needs.
+    </p>
+  </div>
+</section>
 <!-- Fullscreen Modal -->
 <div class="modal" onclick="closeModal()">
   <img class="modal-content" id="expanded-image" src="" alt="">
@@ -84,7 +84,7 @@
 <div class="container">
 
   <div class="slideshow-container">
-    <!-- Full-width images with number text -->
+    <!-- Full-width slides -->
     <div class="mySlides">
       <div class="numbertext">1 / 6</div>
       <img src="./resources/css/images/slide1.jpg" style="width:100%">
@@ -98,6 +98,21 @@
     <div class="mySlides">
       <div class="numbertext">3 / 6</div>
       <img src="./resources/css/images/slide3.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">4 / 6</div>
+      <img src="./resources/css/images/slide4.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">5 / 6</div>
+      <img src="./resources/css/images/slide5.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">6 / 6</div>
+      <img src="./resources/css/images/slide6.jpg" style="width:100%">
     </div>
 
     <!-- Next and previous buttons -->
@@ -115,6 +130,15 @@
     </div>
     <div class="column">
       <img class="demo cursor" src="./resources/css/images/slide3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Slide 3">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="./resources/css/images/slide4.jpg" style="width:100%" onclick="currentSlide(4)" alt="Slide 4">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="./resources/css/images/slide5.jpg" style="width:100%" onclick="currentSlide(5)" alt="Slide 5">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="./resources/css/images/slide6.jpg" style="width:100%" onclick="currentSlide(6)" alt="Slide 6">
     </div>
   </div>
 
