--- a/contact.html
+++ b/contact.html
@@ -61,31 +61,34 @@
     <h2 class="contact-h2" style="font-family: 'Tangerine', cursive; font-size: 70px; color: hotpink;">Contact Us</h2>
   </div>
 </section>
-  <div class="contact-wrapper">
-    <!-- Left Column: Contact Form -->
-    <div class="contact-container">
-      <form class="contact-form" action="mailto:your@email.com" method="POST" enctype="text/plain">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required />
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
+<!-- Contact Form Section -->
+<section class="contact-form-section">
+  <div class="contact-container">
+    <form class="contact-form" action="mailto:your@email.com" method="POST" enctype="text/plain">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required />
 
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required />
 
-        <button type="submit">Send Message</button>
-      </form>
-    </div>
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" rows="5" required></textarea>
 
-    <!-- Right Column: Google Map -->
-    <div class="map-container">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31757.000429619977!2d-96.99623982920205!3d33.21295638764341!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1747081615971!5m2!1sen!2sus" 
-        width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
-    </div>
+      <button type="submit">Send Message</button>
+    </form>
   </div>
 </section>
+
+<!-- Google Map Section -->
+<section class="map-section">
+  <div class="map-container">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31757.000429619977!2d-96.99623982920205!3d33.21295638764341!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1747081615971!5m2!1sen!2sus" 
+      width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </div>
+</section>
+
   <script src="./resources/js/menu.js"></script>
 </body>
 <footer>
