--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
   <div class="full-width-image">
     <img src="./resources/css/images/main.jpg" alt="Decorative Background" />
     <div class="hero-text">
-      <h4>WELCOME TO<br>ALF NAILS ART</h4>
+      <h4>WELCOME TO</h4>
+      <h3>Alf Nails Art</h3>
       <h1>Premium European<br>Manicure Services</h1>
       <a href="#book" class="cta-button">BOOK NOW</a>
     </div>
@@ -152,7 +153,7 @@
   <div class="footer-content">
   </div>
   <p class="footer-copyright">
-    &copy; 2025 Alf Nails Art. All rights reserved.
+    &copy; 2020 Alf Nails Art. All rights reserved.
   </p>
 </footer>
 </html>
