--- a/index.html
+++ b/index.html
@@ -68,12 +68,10 @@
   </div>
   <div class="column text-column">
     <h2 class="about">About Me</h2>
-    <p>
-      With over a decade of experience and international training, Natasha brings the art of the Russian manicure to her clients with precision and care. Her attention to detail and passion for perfection have made her salon one of the most trusted in the area.
-    </p>
-    <p>
-      Whether you're looking for a natural look or something bold, Natasha customizes each service to meet your style and needs.
-    </p>
+    <p class="para-about">Hi, I’m Natasha a passionate and inspired nail artist with a lifelong love for manicures. My journey began back in school, where I’d spend afternoons with my girlfriends, practicing on each other just for fun. With the support of my amazing mother, who gifted me my very first starter kit, my childhood hobby quickly turned into a growing passion.</p>
+    <p class="para-about">Over the years, I dedicated myself to mastering the art of nail care. Through constant practice and professional training, I significantly refined my skills, specializing in high-precision techniques like the Russian Manicure.</p>
+    <p class="para-about">After moving to the U.S., I explored different career paths, but nothing matched the creativity and joy I found in nail artistry. That spark never faded and eventually, I realized that my true calling had always been in the world of nails.</p>
+    <p class="para-about">Today, I bring that same love, precision, and dedication to every client I work with. Let me share my passion with you and help your nails shine with beauty and perfection.</p>
   </div>
 </section>
 <!-- Fullscreen Modal -->
