made it mobile and desktop friendly

--- a/index.html
+++ b/index.html
@@ -61,27 +61,27 @@
     </div>
   </div>
 
-  <!-- About Section -->
-  <section class="two-column">
-  <div class="column image-column">
-    <img class="about-me-picture" src="./resources/css/images/natasha.jpg" alt="About Me">
+<div class="about-section">
+  <img src="./resources/css/images/natashanailtech.jpg" alt="Natasha doing nails" class="about-img" />
+  <div class="about-text">
+    <h2>About Me</h2>
+    <p>Hi, I’m Natasha a passionate and inspired nail artist with a lifelong love for manicures. My journey began back in school, where I’d spend afternoons with my girlfriends, practicing on each other just for fun. With the support of my amazing mother, who gifted me my very first starter kit, my childhood hobby quickly turned into a growing passion.
+
+Over the years, I dedicated myself to mastering the art of nail care. Through constant practice and professional training, I significantly refined my skills, specializing in high-precision techniques like the Russian Manicure.
+
+After moving to the U.S., I explored different career paths, but nothing matched the creativity and joy I found in nail artistry. That spark never faded and eventually, I realized that my true calling had always been in the world of nails.
+
+Today, I bring that same love, precision, and dedication to every client I work with. Let me share my passion with you and help your nails shine with beauty and perfection.</p>
   </div>
-  <div class="column text-column">
-    <h2 class="about">About Me</h2>
-    <p></p>
-    <p class="para-about">Hi, I’m Natasha a passionate and inspired nail artist with a lifelong love for manicures. My journey began back in school, where I’d spend afternoons with my girlfriends, practicing on each other just for fun. With the support of my amazing mother, who gifted me my very first starter kit, my childhood hobby quickly turned into a growing passion.</p>
-    <p class="para-about">Over the years, I dedicated myself to mastering the art of nail care. Through constant practice and professional training, I significantly refined my skills, specializing in high-precision techniques like the Russian Manicure.</p>
-    <p class="para-about">After moving to the U.S., I explored different career paths, but nothing matched the creativity and joy I found in nail artistry. That spark never faded and eventually, I realized that my true calling had always been in the world of nails.</p>
-    <p class="para-about">Today, I bring that same love, precision, and dedication to every client I work with. Let me share my passion with you and help your nails shine with beauty and perfection.</p>
-  </div>
-</section>
+</div>
+
 <!-- Fullscreen Modal -->
 <div class="modal" onclick="closeModal()">
   <img class="modal-content" id="expanded-image" src="" alt="">
 </div>
   <!-- Slideshow -->
    <!-- Container for the image gallery -->
-<div class="container">
+<div class="container-slideshow1">
 
   <div class="slideshow-container">
     <!-- Full-width slides -->
