--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,9 @@
 
   <!-- External CSS -->
   <link rel="stylesheet" href="./resources/css/styles.css" />
+
+  <!-- Favicon -->
+   <a href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">Instagram logo icons created by Freepik - Flaticon</a>
 </head>
 <body>
 
@@ -49,38 +52,44 @@
     </nav>
   </div>
 </header>
-  <!-- Hero Section -->
-  <section>
-  <div class="selection-image">
-    <img src="./resources/css/images/stick.jpg" alt="Decorative Background" />
-    <h1 class="hero-title"></h1>
-  </div>
+<body>
+  <!-- Section 1: Hero Image -->
+  <section class="hero">
+    <img src="./resources/css/images/contact-hero.jpg" alt="Hero Image" />
   </section>
-<section class="contact-section">
-  <div class="contact-center">
-    <h2 class="contact-h2" style="font-family: 'Tangerine', cursive; font-size: 70px; color: hotpink;">Contact Us</h2>
-  </div>
+
+  <!-- Section 2: More Ways to Connect -->
+  <section class="connect-info">
+  <h2>More Ways to Connect</h2>
+  <p>Learn more ways how to connect.</p>
+  <div class="icon-circles">
+    <div class="icon-text">
+        <div class="circle">
+            <a id="phone" href="tel:+1234567890" aria-label="Call Us">
+                <img src="./resources/css/images/telephone-handle-silhouette.png" alt="Phone Icon" />
+            </a>
+        </div>
+        <p>Call Us</p>
+    </div>
+    <div class="icon-text">
+        <div class="circle">
+            <a id="email" href="mailto:info@example.com" aria-label="Email Us">
+                <img src="./resources/css/images/envelope-of-white-paper.png" alt="Email Icon" />
+            </a>
+        </div>
+        <p>Email Us</p>
+    </div>
+    <div class="icon-text">
+        <div class="circle">
+            <a id="location" href="https://www.google.com/maps?q=Your+Business+Location" target="_blank" aria-label="Find Us on Google Maps">
+                <img src="./resources/css/images/earth-globe.png" alt="Location Icon" />
+            </a>
+        </div>
+        <p>Find Us</p>
+    </div>
+</div>
 </section>
-
-<!-- Contact Form Section -->
-<section class="contact-form-section">
-  <div class="contact-container">
-    <form class="contact-form" action="mailto:your@email.com" method="POST" enctype="text/plain">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required />
-
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required />
-
-      <label for="message">Message:</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
-
-      <button type="submit">Send Message</button>
-    </form>
-  </div>
-</section>
-
-<!-- Google Map Section -->
+  <!-- Google Map Section -->
 <section class="map-section">
   <div class="map-container">
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31757.000429619977!2d-96.99623982920205!3d33.21295638764341!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1747081615971!5m2!1sen!2sus" 
@@ -88,6 +97,25 @@
     </iframe>
   </div>
 </section>
+
+  <!-- Section 3: Social Media -->
+  <section class="social-section">
+    <div class="boxes">
+      <img src="box1.jpg" alt="Box 1" />
+      <img src="box2.jpg" alt="Box 2" />
+      <img src="box3.jpg" alt="Box 3" />
+    </div>
+    <div class="social-text">
+      <h1>Connect on Social Media</h1>
+      <p>Learn more about us on these sites.</p>
+      <div class="icons">
+        <a href="" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+        <a href="#" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
+      </div>
+    </div>
+  </section>
+</body>
 
   <script src="./resources/js/menu.js"></script>
 </body>
