fixed footer and contact page

--- a/faq.html
+++ b/faq.html
@@ -99,6 +99,7 @@
   </section>
   <script src="./resources/js/menu.js"></script>
 </body>
+<!-- Footer -->
 <footer>
   <div class="footer-content">
   </div>
