--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@ Today, I bring that same love, precision, and dedication to every client I work 
   </div>
   <script src="./resources/js/menu.js"></script>
 </body>
+<!-- Footer -->
 <footer>
   <div class="footer-content">
   </div>
