--- a/services.html
+++ b/services.html
@@ -49,7 +49,6 @@
     </nav>
   </div>
 </header>
-
   <!-- Hero Section -->
   <div class="selection-image">
     <img src="./resources/css/images/stick.jpg" alt="Decorative Background" />
@@ -163,7 +162,8 @@
   </script>
   <script src="./resources/js/menu.js"></script>
 </body>
-  <footer>
+  <!-- Footer -->
+<footer>
   <div class="footer-content">
   </div>
   <p class="footer-copyright">
