--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,6 @@
 
   <!-- External CSS -->
   <link rel="stylesheet" href="./resources/css/styles.css" />
-
-  <!-- Favicon -->
-   <a href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">Instagram logo icons created by Freepik - Flaticon</a>
 </head>
 <body>
 
@@ -100,30 +97,33 @@
 
   <!-- Section 3: Social Media -->
   <section class="social-section">
-    <div class="boxes">
-      <img src="box1.jpg" alt="Box 1" />
-      <img src="box2.jpg" alt="Box 2" />
-      <img src="box3.jpg" alt="Box 3" />
+    <div class="social-content">
+        <!-- Images on the left -->
+        <div class="boxes">
+            <img src="./resources/css/images/contactimg1.jpg" alt="Box 1" />
+            <img src="./resources/css/images/contactimg2.jpg" alt="Box 2" />
+            <img src="./resources/css/images/contactimg3.jpg" alt="Box 3" />
+        </div>
+        <!-- Text on the right -->
+        <div class="social-text">
+            <h1>Connect on Social Media</h1>
+            <p>Learn more about us on these sites.</p>
+            <div class="icons">
+                <a href="https://instagram.com" aria-label="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://facebook.com" aria-label="Facebook" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://telegram.org" aria-label="Telegram" target="_blank"><i class="fab fa-telegram"></i></a>
+            </div>
+        </div>
     </div>
-    <div class="social-text">
-      <h1>Connect on Social Media</h1>
-      <p>Learn more about us on these sites.</p>
-      <div class="icons">
-        <a href="" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-        <a href="#" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
-      </div>
-    </div>
-  </section>
-</body>
-
+</section>
   <script src="./resources/js/menu.js"></script>
 </body>
-<footer>
-  <div class="footer-content">
-  </div>
-  <p class="footer-copyright">
-    &copy; 2020 Alf Nails Art. All rights reserved.
-  </p>
-</footer>
+<!-- Footer -->
+  <footer>
+    <div class="footer-content">
+    </div>
+    <p class="footer-copyright">
+      &copy; 2020 Alf Nails Art. All rights reserved.
+    </p>
+  </footer>
 </html>
