--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
     <nav class="off-screen-menu" id="navMenu">
       <ul>
         <li><a href="services.html">Services</a></li>
-        <li><a href="index.html#about">About Me</a></li>
+        <li><a href="index.html#about-text">About Me</a></li>
         <li><a href="faq.html">FAQ / Policy</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
