--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <nav class="off-screen-menu" id="navMenu">
       <ul>
         <li><a href="services.html">Services</a></li>
-        <li><a href="index.html#about">About Me</a></li>
+        <li><a href="index.html#about-text">About Me</a></li>
         <li><a href="faq.html">FAQ / Policy</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
@@ -61,18 +61,17 @@
     </div>
   </div>
 
-<div class="about-section">
-  <img src="./resources/css/images/natashanailtech.jpg" alt="Natasha doing nails" class="about-img" />
-  <div class="about-text">
-    <h2>About Me</h2>
-    <p>Hi, I’m Natasha a passionate and inspired nail artist with a lifelong love for manicures. My journey began back in school, where I’d spend afternoons with my girlfriends, practicing on each other just for fun. With the support of my amazing mother, who gifted me my very first starter kit, my childhood hobby quickly turned into a growing passion.
-
-Over the years, I dedicated myself to mastering the art of nail care. Through constant practice and professional training, I significantly refined my skills, specializing in high-precision techniques like the Russian Manicure.
-
-After moving to the U.S., I explored different career paths, but nothing matched the creativity and joy I found in nail artistry. That spark never faded and eventually, I realized that my true calling had always been in the world of nails.
-
-Today, I bring that same love, precision, and dedication to every client I work with. Let me share my passion with you and help your nails shine with beauty and perfection.</p>
-  </div>
+<div id="about-text" class="about-section">
+    <div class="about-content">
+        <img src="./resources/css/images/natashanailtech.jpg" alt="Natasha doing nails" class="about-img" />
+        <div class="about-text">
+            <h2>About Me</h2>
+            <p>Hi, I’m Natasha, a passionate and inspired nail artist with a lifelong love for manicures. My journey began back in school, where I’d spend afternoons with my girlfriends, practicing on each other just for fun. With the support of my amazing mother, who gifted me my very first starter kit, my childhood hobby quickly turned into a growing passion.</p>
+            <p>Over the years, I dedicated myself to mastering the art of nail care. Through constant practice and professional training, I significantly refined my skills, specializing in high-precision techniques like the Russian Manicure.</p>
+            <p>After moving to the U.S., I explored different career paths, but nothing matched the creativity and joy I found in nail artistry. That spark never faded and eventually, I realized that my true calling had always been in the world of nails.</p>
+            <p>Today, I bring that same love, precision, and dedication to every client I work with. Let me share my passion with you and help your nails shine with beauty and perfection.</p>
+        </div>
+    </div>
 </div>
 
 <!-- Fullscreen Modal -->
