fixed footer icons on contact page

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
                 <img src="./resources/css/images/earth-globe.png" alt="Location Icon" />
             </a>
         </div>
-        <p>Find Us</p>
+        <p>Aubrey, TX</p>
     </div>
 </div>
 </section>
@@ -109,9 +109,9 @@
             <h1>Connect on Social Media</h1>
             <p>Learn more about us on these sites.</p>
             <div class="icons">
-                <a href="https://instagram.com" aria-label="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://facebook.com" aria-label="Facebook" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://telegram.org" aria-label="Telegram" target="_blank"><i class="fab fa-telegram"></i></a>
+                <a href="https://instagram.com/YOUR_INSTAGRAM_HANDLE" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a href="https://facebook.com/YOUR_FACEBOOK_PAGE" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://telegram.org" aria-label="Telegram" target="_blank"><i class="fa fa-telegram"></i></a>
             </div>
         </div>
     </div>
