--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@
 </header>
   <!-- Hero Section -->
   <div class="selection-image">
-    <img src="./resources/css/images/stick.jpg" alt="Decorative Background" />
+    <img src="./resources/css/images/pexels-cottonbro-3997344.jpg" alt="Decorative Background" />
   </div>
 
   <!-- Services Page -->
@@ -125,6 +125,10 @@
               <span class="pricing-label">DELUXE PEDICURE</span>
               <span class="pricing-price">90$</span>
             </div> -->
+            <div class="disclaimer">
+              <h2 class="disclaimer-title">PLEASE NOTE:</h2>
+              <p> We work with GEL POLISH OVERLAY on NATURAL NAILS ONLY, meaning we do not offer extensions or tips at this time, or acrylic/dip powder/gel X services.</p>
+            </div>
           </div>
             </div>
           </div>
