--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
   <!-- Main Navbar -->
 <header>
   <div class="main-navbar">
-  <div class="logo-branding">
-    <a href="index.html">
-      <img src="./resources/css/images/logo transparent.png" alt="Logo">
-    </a>
-  </div>
-    <div class="ham-menu" onclick="toggleMenu()">
+    <div class="logo-branding">
+      <a href="index.html">
+        <img src="./resources/css/images/logo transparent.png" alt="Logo">
+      </a>
+    </div>
+    <div class="ham-menu" id="hamMenu">
       <span></span>
       <span></span>
       <span></span>
