--- a/services.html
+++ b/services.html
@@ -111,30 +111,14 @@
             </div>
           </div>
 
-          <!-- <h2 class="service-title">Pedicure</h2>
-          <div class="pricing-table">
-            <div class="pricing-row">
-              <span class="pricing-label">BASIC PEDICURE</span>
-              <span class="pricing-price">50$</span>
-            </div>
-            <div class="pricing-row">
-              <span class="pricing-label">SPA PEDICURE</span>
-              <span class="pricing-price">70$</span>
-            </div>
-            <div class="pricing-row">
-              <span class="pricing-label">DELUXE PEDICURE</span>
-              <span class="pricing-price">90$</span>
-            </div> -->
-            <div class="disclaimer">
-              <h2 class="disclaimer-title">PLEASE NOTE:</h2>
-              <p> We work with GEL POLISH OVERLAY on NATURAL NAILS ONLY, meaning we do not offer extensions or tips at this time, or acrylic/dip powder/gel X services.</p>
-            </div>
-          </div>
-            </div>
+          <div class="disclaimer">
+            <h2 class="disclaimer-title">Please Note:</h2>
+            <p>I work with gel polish overlay on natural nails only.<br>Meaning I don't offer: <br>Extensions, Tips, Acrylic-dip and Powder-Gel X services at this time.</p>
           </div>
         </div>
       </div>
     </div>
+  </main>
 
   <!-- Scripts -->
   <script>
@@ -142,8 +126,7 @@
       const navMenu = document.getElementById('navMenu');
       navMenu.classList.toggle('active');
     }
-  </script>
-  <script>
+
     let servicesSlideIndex = 0;
     showServicesSlides();
 
@@ -165,13 +148,13 @@
     }
   </script>
   <script src="./resources/js/menu.js"></script>
-</body>
+
   <!-- Footer -->
-<footer>
-  <div class="footer-content">
-  </div>
-  <p class="footer-copyright">
-    &copy; 2020 Alf Nails Art. All rights reserved.
-  </p>
-</footer>
+  <footer>
+    <div class="footer-content"></div>
+    <p class="footer-copyright">
+      &copy; 2020 Alf Nails Art. All rights reserved.
+    </p>
+  </footer>
+</body>
 </html>
