--- a/services.html
+++ b/services.html
@@ -113,7 +113,7 @@
 
           <div class="disclaimer">
             <h2 class="disclaimer-title">Please Note:</h2>
-            <p>I work with gel polish overlay on natural nails only.<br>Meaning I don't offer: <br>Extensions, Tips, Acrylic-dip and Powder-Gel X services at this time.</p>
+            <p>At this time, I specialize exclusively in gel polish overlays on natural nails. I do not offer nail extensions, tips, acrylic, dip powder, or Gel-X services. My focus is on maintaining the health and beauty of your natural nails through high-quality gel manicures.</p>
           </div>
         </div>
       </div>
