--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <!-- Top Bar -->
   <div class="top-bar">
     <div class="top-right">
-      <a href="https://instagram.com/YOUR_INSTAGRAM_HANDLE" target="_blank"><i class="fa fa-instagram"></i></a>
-      <a href="https://facebook.com/YOUR_FACEBOOK_PAGE" target="_blank"><i class="fa fa-facebook"></i></a>
+      <a href="https://www.instagram.com/alf_nails_art?igsh=MThhbjZubGw3dDZycQ%3D%3D&utm_source=qr" target="_blank"><i class="fa fa-instagram"></i></a>
+      <a href="https://www.facebook.com/share/1HwpGSfA3S/?mibextid=wwXIfr" target="_blank"><i class="fa fa-facebook"></i></a>
     </div>
   </div>
 
