--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
   <div class="icon-circles">
     <div class="icon-text">
         <div class="circle">
-            <a id="phone" href="tel:+1234567890" aria-label="Call Us">
+            <a id="phone" href="tel:+1224-383-4135" aria-label="Call Us">
                 <img src="./resources/css/images/telephone-handle-silhouette.png" alt="Phone Icon" />
             </a>
         </div>
@@ -70,7 +70,7 @@
     </div>
     <div class="icon-text">
         <div class="circle">
-            <a id="email" href="mailto:info@example.com" aria-label="Email Us">
+            <a id="email" href="alferovnatasha@gmail.com" aria-label="Email Us">
                 <img src="./resources/css/images/envelope-of-white-paper.png" alt="Email Icon" />
             </a>
         </div>
@@ -109,9 +109,9 @@
             <h1>Connect on Social Media</h1>
             <p>Learn more about us on these sites.</p>
             <div class="icons">
-                <a href="https://instagram.com/YOUR_INSTAGRAM_HANDLE" target="_blank"><i class="fa fa-instagram"></i></a>
-                <a href="https://facebook.com/YOUR_FACEBOOK_PAGE" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href="https://telegram.org" aria-label="Telegram" target="_blank"><i class="fa fa-telegram"></i></a>
+                <a href="https://www.instagram.com/alf_nails_art?igsh=MThhbjZubGw3dDZycQ%3D%3D&utm_source=qr" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.facebook.com/share/1HwpGSfA3S/?mibextid=wwXIfr" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://t.me/Alfnatasha7757" aria-label="Telegram" target="_blank"><i class="fa fa-telegram"></i></a>
             </div>
         </div>
     </div>
