--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
   <div class="icon-circles">
     <div class="icon-text">
         <div class="circle">
-            <a id="phone" href="tel:+1224-383-4135" aria-label="Call Us">
+            <a id="phone" href="tel:+12243834135" aria-label="Call Us">
                 <img src="./resources/css/images/telephone-handle-silhouette.png" alt="Phone Icon" />
             </a>
         </div>
@@ -70,7 +70,7 @@
     </div>
     <div class="icon-text">
         <div class="circle">
-            <a id="email" href="alferovnatasha@gmail.com" aria-label="Email Us">
+            <a id="email" href="mailto:alferovnatasha@gmail.com" aria-label="Email Us">
                 <img src="./resources/css/images/envelope-of-white-paper.png" alt="Email Icon" />
             </a>
         </div>
@@ -78,7 +78,7 @@
     </div>
     <div class="icon-text">
         <div class="circle">
-            <a id="location" href="https://www.google.com/maps?q=Your+Business+Location" target="_blank" aria-label="Find Us on Google Maps">
+            <a id="location" href="https://www.google.com/maps/place/Aubrey,+TX/@33.2958199,-97.0023185,13z/data=!3m1!4b1!4m6!3m5!1s0x864c352505d81d41:0xd509f129b1217693!8m2!3d33.3042834!4d-96.986118!16zL20vMF9fXzM?entry=ttu&g_ep=EgoyMDI1MDUxMi4wIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D" target="_blank" aria-label="Find Us on Google Maps">
                 <img src="./resources/css/images/earth-globe.png" alt="Location Icon" />
             </a>
         </div>
