--- a/contact.html
+++ b/contact.html
@@ -62,23 +62,23 @@
   <div class="icon-circles">
     <div class="icon-text">
         <div class="circle">
-            <a id="phone" href="tel:+12243834135" aria-label="Call Us">
+            <a id="phone" href="" aria-label="Text me (224) 383-4135">
                 <img src="./resources/css/images/telephone-handle-silhouette.png" alt="Phone Icon" />
             </a>
         </div>
-        <p>Call Us</p>
+        <p>Text me (224) 383-4135</p>
     </div>
     <div class="icon-text">
         <div class="circle">
-            <a id="email" href="mailto:alferovnatasha@gmail.com" aria-label="Email Us">
+            <a id="email" href="mailto:alferovnatasha@gmail.com" aria-label="Email Me">
                 <img src="./resources/css/images/envelope-of-white-paper.png" alt="Email Icon" />
             </a>
         </div>
-        <p>Email Us</p>
+        <p>Email Me</p>
     </div>
     <div class="icon-text">
         <div class="circle">
-            <a id="location" href="https://www.google.com/maps/place/Aubrey,+TX/@33.2958199,-97.0023185,13z/data=!3m1!4b1!4m6!3m5!1s0x864c352505d81d41:0xd509f129b1217693!8m2!3d33.3042834!4d-96.986118!16zL20vMF9fXzM?entry=ttu&g_ep=EgoyMDI1MDUxMi4wIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D" target="_blank" aria-label="Find Us on Google Maps">
+            <a id="location" href="" target="_blank" aria-label="Find Us on Google Maps">
                 <img src="./resources/css/images/earth-globe.png" alt="Location Icon" />
             </a>
         </div>
@@ -109,9 +109,7 @@
             <h1>Connect on Social Media</h1>
             <p>Learn more about us on these sites.</p>
             <div class="icons">
-                <a href="https://www.instagram.com/alf_nails_art?igsh=MThhbjZubGw3dDZycQ%3D%3D&utm_source=qr" target="_blank"><i class="fa fa-instagram"></i></a>
-                <a href="https://www.facebook.com/share/1HwpGSfA3S/?mibextid=wwXIfr" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href="https://t.me/Alfnatasha7757" aria-label="Telegram" target="_blank"><i class="fa fa-telegram"></i></a>
+                <a href="https://www.instagram.com/alf_nails_art?igsh=MThhbjZubGw3dDZycQ%3D%3D&utm_source=qr" target="_blank"><i class="fa fa-instagram"></i></a>                <a href="https://t.me/Alfnatasha7757" aria-label="Telegram" target="_blank"><i class="fa fa-telegram"></i></a>
             </div>
         </div>
     </div>
