--- a/contact.html
+++ b/contact.html
@@ -11,18 +11,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&family=WindSong:wght@400;500&display=swap" rel="stylesheet" />
 
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <!-- External CSS -->
   <link rel="stylesheet" href="./resources/css/styles.css" />
 </head>
 <body>
 
-  <!-- Top Bar -->
+ <!-- Top Bar -->
   <div class="top-bar">
     <div class="top-right">
-      <a href="https://instagram.com/YOUR_INSTAGRAM_HANDLE" target="_blank"><i class="fa fa-instagram"></i></a>
-      <a href="https://facebook.com/YOUR_FACEBOOK_PAGE" target="_blank"><i class="fa fa-facebook"></i></a>
+      <a href="https://www.instagram.com/alf_nails_art?igsh=MThhbjZubGw3dDZycQ%3D%3D&utm_source=qr" target="_blank" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://t.me/Alfnatasha7757" target="_blank" aria-label="Telegram">
+        <i class="fab fa-telegram"></i>
+      </a>
     </div>
   </div>
 
@@ -58,7 +62,7 @@
   <!-- Section 2: More Ways to Connect -->
   <section class="connect-info">
   <h2>More Ways to Connect</h2>
-  <p>Learn more ways how to connect.</p>
+  <p></p>
   <div class="icon-circles">
     <div class="icon-text">
         <div class="circle">
@@ -70,11 +74,11 @@
     </div>
     <div class="icon-text">
         <div class="circle">
-            <a id="email" href="mailto:alferovnatasha@gmail.com" aria-label="Email Me">
+            <a id="email" href="" aria-label="Email Me">
                 <img src="./resources/css/images/envelope-of-white-paper.png" alt="Email Icon" />
             </a>
         </div>
-        <p>Email Me</p>
+        <p>Email Me: alferovnatasha@gmail.com</p>
     </div>
     <div class="icon-text">
         <div class="circle">
@@ -107,9 +111,14 @@
         <!-- Text on the right -->
         <div class="social-text">
             <h1>Connect on Social Media</h1>
-            <p>Learn more about us on these sites.</p>
+            <p>Follow me on social media to stay up to date!</p>
             <div class="icons">
-                <a href="https://www.instagram.com/alf_nails_art?igsh=MThhbjZubGw3dDZycQ%3D%3D&utm_source=qr" target="_blank"><i class="fa fa-instagram"></i></a>                <a href="https://t.me/Alfnatasha7757" aria-label="Telegram" target="_blank"><i class="fa fa-telegram"></i></a>
+              <a href="https://www.instagram.com/alf_nails_art?igsh=MThhbjZubGw3dDZycQ%3D%3D&utm_source=qr" target="_blank" aria-label="Instagram">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="https://t.me/Alfnatasha7757" target="_blank" aria-label="Telegram">
+                <i class="fab fa-telegram"></i>
+              </a>
             </div>
         </div>
     </div>
