--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&family=WindSong:wght@400;500&display=swap" rel="stylesheet" />
 
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 
   <!-- External CSS -->
   <link rel="stylesheet" href="./resources/css/styles.css" />
@@ -21,8 +21,12 @@
   <!-- Top Bar -->
   <div class="top-bar">
     <div class="top-right">
-      <a href="https://www.instagram.com/alf_nails_art?igsh=MThhbjZubGw3dDZycQ%3D%3D&utm_source=qr" target="_blank"><i class="fa fa-instagram"></i></a>
-      <a href="https://www.facebook.com/share/1HwpGSfA3S/?mibextid=wwXIfr" target="_blank"><i class="fa fa-facebook"></i></a>
+      <a href="https://www.instagram.com/alf_nails_art?igsh=MThhbjZubGw3dDZycQ%3D%3D&utm_source=qr" target="_blank" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://t.me/Alfnatasha7757" target="_blank" aria-label="Telegram">
+        <i class="fab fa-telegram"></i>
+      </a>
     </div>
   </div>
 
